# yolo_runitme

./: .gitignore  README.md
objectdetection/: CMakeLists.txt  ObejectDetect.cpp  YOLO.cpp  YOLO.h  build.bat  c_api.cpp  c_api.h  yolo_bindings.cpp
python/: README.md  demo.py  yolo_runtime.py
